--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ __pycache__/
 
 # ignore bulk of Satellite info, but not the folder
 EPH_SAT_from_celestrak/*
-!EPH_SAT_from_celestrak/
+!EPH_SAT_from_celestrak/._keep
 
 # ignore test file
 test.py
